# supercomp-project

./: .gitignore  CMakeLists.txt
code/: CMakeLists.txt
code/include/: IntervalTree.h  utils.hpp
code/lib/: CMakeLists.txt
code/lib/exaustive/: CMakeLists.txt
code/lib/exaustive/omp/: exaustive.cpp  exaustive.hpp
code/lib/exaustive/thrust/: exaustive.cu  exaustive.hpp
code/lib/random/: random.cpp
code/lib/scheduler/: scheduler.cpp  scheduler.hpp
code/src/: CMakeLists.txt  main.cpp
include/: utils.hpp
lib/: CMakeLists.txt
lib/exaustive/: exaustive.cpp  exaustive.hpp
lib/generator/: generator.cpp  generator.hpp
lib/greedy/: greedy.cpp  greedy.hpp
lib/random/: random.cpp  random.hpp
lib/scheduler/: scheduler.cpp  scheduler.hpp
scripts/: input_generator.bash  output_generator.bash
src/: generator.cpp  main.cpp
valgrind/: callgrind.out.greedy  callgrind.out.random  callgrind_annotate_greedy.txt  callgrind_annotate_random.txt  error_and_leakage_report.txt
